tests/ui/feature-gates/feature-gate-diagnostic-on-const.stderr
error[E0015]: cannot call non-const operator in constant functions
  --> $DIR/feature-gate-diagnostic-on-const.rs:12:5
   |
LL |     Foo == Foo;
   |     ^^^^^^^^^^
   |
note: impl defined here, but it is not `const`
  --> $DIR/auxiliary/diagnostic-on-const.rs:4:1
   |
LL | impl PartialEq for Foo {
   | ^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
